refresh scheduler